# pfeiffer-turbo

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pfeiffer_turbo/: __init__.py  device.py  errors.py  parameters.py  telegram.py  transport.py
tests/: test_device.py  test_telegram.py
