[tool.poetry]
name = "pfeiffer-tc400"
version = "0.1.0"
description = ""
authors = ["ograsdijk <o.grasdijk@gmail.com>"]
readme = "README.md"
packages = [{include = "pfeiffer_tc400"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
